scss/components/_banner.scss
[role=banner] {
  background-color: var(--background-color);
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  font-family: 'Source Code Pro', monospace;
  min-width: var(--banner-width);
  transition-duration: 0.2s;
  transition-property: transform;

  %anchor-hover-styles {
    background-color: var(--brand-primary);
    color: var(--white);
    outline: none;
    width: calc(100%);
  }

  %label-hover-styles {
    &:after {
      border-top-color: var(--white);
    }
  }

  [for='banner-control'] {
    font-size: 2em;
    left: calc(100% + var(--gutter));
    opacity: 1;
    position: absolute;
    top: 0;
    transition-duration: 0.2s;
    transition-property: opacity;
    width: auto;

    svg:not(:first-child) {
      left: 50%;
      position: absolute;
      top: 50%;
      transform: translate(-50%, -50%);
    }

    @media (min-width: 1300px) {
      &, &:focus {
        opacity: 0;
        pointer-events: none;
      }
    }
  }

  nav {
    a,
    button,
    label {
      align-items: center;
      box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
      color: var(--text-color);
      cursor: pointer;
      display: flex;
      line-height: inherit;
      padding: var(--gutter);
      text-decoration: none;
      transform: scale(1);
      transition-duration: 0.2s;
      transition-property:
        background-color,
        box-shadow,
        color,
        padding,
        transform;
      width: 100%;

      &:focus,
      &:hover {
        @extend %anchor-hover-styles;

        box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.5);
        transform: scale(1.2);
        z-index: 1;
      }

      [data-icon],
      .fa-layers {
        + span {
          margin-left: var(--gutter);
        }
      }
    }

    label {
      &:after {
        border-color: transparent;
        border-style: solid;
        border-width: 0.5rem;
        border-bottom-width: 0;
        border-top-color: var(--text-color);
        content: '';
        height: 0;
        margin-left: calc(var(--gutter));
        transform: rotate(0);
        transition-duration: 0.2s;
        transition-property: border-top-color, transform;
        width: 0;
      }

      &:hover,
      &:focus {
        @extend %label-hover-styles;
      }
    }

    li {
      display: flex;
      position: relative;

      &:focus,
      &:hover {
        > a,
        > label {
          @extend %anchor-hover-styles;
        }
      }
    }
  }

  .subnav {
    background-color: var(--background-color);
    left: 100%;
    max-height: 0;
    opacity: 0;
    pointer-events: none;
    position: absolute;
    top: 0;
    transition-duration: 0.2s;
    transition-property: max-height, opacity;
  }

  [name='subnav']:checked {
    ~ ul.subnav {
      max-height: 100vh !important;
      opacity: 1 !important;
      pointer-events: initial;
    }

    ~ a,
    ~ label {
      @extend %anchor-hover-styles;
      @extend %label-hover-styles;

      box-shadow: none;
      transform: scale(1);

      &:after {
        transform: rotate(-90deg);
      }
    }
  }

  .social {
    margin-top: auto;

    ul {
      display: grid;
      grid-template-columns: repeat(3, 1fr);
    }
  }

  @media (max-width: 1300px) {
    bottom: var(--gutter);
    left: var(--gutter);
    position: fixed;
    transform: translateX(calc(-100% - var(--gutter)));
    left: var(--gutter);
    top: var(--gutter);
    z-index: 1;
  }

  @media (min-width: 1300px) {
    max-height: calc(100vh - (var(--gutter) * 2));
    position: sticky;
    top: var(--gutter);
    z-index: 1;

    .social {
      margin-top: var(--gutter);
    }
  }

  @media (max-height: 700px) {
    .social {
      display: none;
    }
  }

  @media (max-height: 470px) {
    nav {
      a,
      button,
      label {
        --vertical-padding: calc(var(--gutter) / 2);
        padding-bottom: var(--vertical-padding);
        padding-top: var(--vertical-padding);
      }
    }
  }
}

